--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "generate": "plop"
   },
   "dependencies": {
+    "@headlessui-float/react": "^0.11.3",
     "@headlessui/react": "^1.7.17",
-    "@tabler/icons-react": "^2.34.0",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "classnames": "^2.3.2",
@@ -22,9 +22,11 @@
     "react-error-boundary": "^4.0.11",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.1",
+    "react-pdf": "^7.4.0",
     "react-router": "^6.16.0",
     "react-router-dom": "6.3.0",
     "rollup-plugin-visualizer": "^5.9.2",
+    "tabler-icons-react": "^1.56.0",
     "vite-tsconfig-paths": "^4.2.1",
     "zustand": "^4.4.1"
   },
