--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run build
 
       - name: Deploy to S3
-        run: aws s3 sync dist ${{ secrets.S3_BUCKET_NAME}} --acl public-read
+        run: aws s3 sync dist s3://${{ secrets.S3_BUCKET_NAME }} --acl public-read
 
     #   - name: Invalidate CloudFront
     #     uses: chetan/invalidate-cloudfront-action@v2
