--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,11 +32,5 @@ jobs:
       - name: Deploy to S3
         run: aws s3 sync dist s3://${{ secrets.S3_BUCKET_NAME }} --acl public-read
 
-    #   - name: Invalidate CloudFront
-    #     uses: chetan/invalidate-cloudfront-action@v2
-    #     env:
-    #         DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
-    #         PATHS: "/index.html"
-    #         AWS_REGION: ${{ secrets.S3_BUCKET_REGION }}
-    #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Invalidate CloudFront Distribution
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
