--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^6.16.0",
     "react-router-dom": "6.3.0",
     "rollup-plugin-visualizer": "^5.9.2",
+    "swiper": "^11.0.5",
     "tabler-icons-react": "^1.56.0",
     "vite-tsconfig-paths": "^4.2.1",
     "zustand": "^4.4.1"
