--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "kwaski.tech",
+  "name": "nrb-bonds-calculator",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Bangladesh NRB Bonds Calculator - Calculate returns on WEDB, USDIB, and USDPB bonds",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -22,12 +23,8 @@
     "react-error-boundary": "^4.0.11",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.46.1",
-    "react-pdf": "^7.4.0",
     "react-router": "^6.16.0",
     "react-router-dom": "6.3.0",
-    "rollup-plugin-visualizer": "^5.9.2",
-    "swiper": "^11.0.5",
-    "tabler-icons-react": "^1.56.0",
     "vite-tsconfig-paths": "^4.2.1",
     "zustand": "^4.4.1"
   },
